# homework19.2

./: pyproject.toml
catalog/: urls.py
catalog/templates/catalog/: index.html
config/: settings.py  urls.py
