[tool.poetry]
name = "python-django-1"
version = "0.1.0"
description = ""
authors = ["Xena Ship <shipxena@gmail.com>"]
readme = "README.md"
packages = [{include = "python_django_1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
